--- a/eTools Ultimate/Views/Pages/Settings/SettingsPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/SettingsPage.xaml
@@ -65,7 +65,7 @@
                         VerticalAlignment="Bottom"
                         FontTypography="Caption"
                         Foreground="#57FFFFFF"
-                        Text="eTools Ultimate" />
+                        Text="Created by eTools Ultimate" />
                 </Grid>
             </Border>
         </Border>
